--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </main>
 
     <footer>
-        <p style="color: #ddd;">&copy; 2025 Your Name</p>
+        <p style="color: #ddd;">&copy; 2025 TJ</p>
     </footer>
 
     <script src="script.js"></script>
